tests/baselines/reference/parser536727.errors.txt
==== tests/cases/compiler/parser536727.ts (4 errors) ====
    function foo(f: (x: string) => string) {
        return f("");
    }
    var g = (x: string) => x + "blah";
    var x = () => g;
    foo(g);
    foo(() => g);
    ~~~
!!! parser536727.ts(7,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '() => (x: string) => string' and '(x: string) => string' are incompatible.
    ~~~
!!! parser536727.ts(7,1): error TS2087: Could not select overload for 'call' expression.
    foo(x);
    ~~~
!!! parser536727.ts(8,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '() => (x: string) => string' and '(x: string) => string' are incompatible.
    ~~~
!!! parser536727.ts(8,1): error TS2087: Could not select overload for 'call' expression.
    